# multithread_utility

./: .gitignore  CMakeLists.txt  README.md
3rd_libraries/: CMakeLists.txt
3rd_libraries/include/fmt/: core.h  format.h
libraries/: CMakeLists.txt
libraries/include/: async_buffer.h  async_caller.h  index_generator.h  ring_buffer.h  synchronized_buffer.h  timed_buffer.h
main/: CMakeLists.txt  test_async_call.cpp  test_ring_buffer.cpp  test_synced_buffer.cpp
